# opencl-host-misuse-study

./: .gitignore  LICENSE-DATA.md  README.md  Text File.txt  aktuell.txt  pilot_sample.py  projects_pilot_50.csv  projects_sample.csv  sample_repos.py
.github/ISSUE_TEMPLATE/: config.yml  data_ingest.yml  labeling_task.yml  schema_change.yml  tool_run.yml
artifacts/CAS-2D/: README.md  cas_harness.c
artifacts/CLIc/: README.md  Text File.txt
artifacts/GNSS-SDR/: README.txt  gnss_artifact_paths.txt  gnss_fix_final.diff  summary_and_diff.txt
repo/CAS-2D/: CMakeLists.txt  cas_harness  opencl_cas_test.cpp  test_cas.cpp  test_opencl_cas  test_opencl_simple  test_opencl_simple.c
repo/CAS-2D/CAS-2D-Lib/: CASImpl.cpp  CASLibWrapper_Instrumented.cpp  opencl_utils.cpp
repo/CAS-2D/CAS-2D-Lib/include/: CASLibWrapper.h
repo/CAS-2D/patches/: cas2d-oclgrind-rgba.patch
